--- a/index.html
+++ b/index.html
@@ -15,41 +15,25 @@
 
         <button>
           <span class="material-symbols-outlined">
-            keyboard_arrow_up
+            location_on
           </span>
         </button>
 
-        <div class="buttons">
-
-          <button>
-            <span class="material-symbols-outlined">
-              north
-            </span>
-          </button>
-
-          <button>
-            <span class="material-symbols-outlined">
-              south
-            </span>
-          </button>
-
-          <button>
-            <span class="material-symbols-outlined">
-              west
-            </span>
-          </button>
-
-          <button>
-            <span class="material-symbols-outlined">
-              east
-            </span>
-          </button>
-
-        </div>
+        <button>
+          <span class="material-symbols-outlined">
+            notifications
+          </span>
+        </button>
 
         <button>
           <span class="material-symbols-outlined">
-            keyboard_arrow_down
+            chat
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            home_repair_service
           </span>
         </button>
 
@@ -74,41 +58,67 @@
 
         <button>
           <span class="material-symbols-outlined">
-            keyboard_arrow_up
+            north
           </span>
         </button>
 
-        <div class="buttons">
-
-          <button>
-            <span class="material-symbols-outlined">
-              north
-            </span>
-          </button>
-
-          <button>
-            <span class="material-symbols-outlined">
-              south
-            </span>
-          </button>
-
-          <button>
-            <span class="material-symbols-outlined">
-              west
-            </span>
-          </button>
-
-          <button>
-            <span class="material-symbols-outlined">
-              east
-            </span>
-          </button>
-
-        </div>
+        <button>
+          <span class="material-symbols-outlined">
+            south
+          </span>
+        </button>
 
         <button>
           <span class="material-symbols-outlined">
-            keyboard_arrow_down
+            west
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            east
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            keyboard_double_arrow_up
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            keyboard_double_arrow_down
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            keyboard_return
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            north_east
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            south_west
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            north_west
+          </span>
+        </button>
+
+        <button>
+          <span class="material-symbols-outlined">
+            south_east
           </span>
         </button>
 
