Customize controls scrollbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <div class="controls">
 
-        <button>
+        <button class="active">
           <span class="material-symbols-outlined">
             location_on
           </span>
